[package]
name = "sectoract_level"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version="1.13.1", features=["derive"] }
constmuck = "1.1.0"
# bevy_math = "0.12.1"
# nvm_str_id = { git="https://github.com/notverymoe/nvm-lib.git", rev="cb0c29035c2964fa5fc3bb350f5afeb58f2710d4" }

[dev-dependencies]
svg = "0.14.0"